# grainstore-env

./: Dockerfile  README.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py  environment.py
