[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "grainstore-env"
version = "1.0.0"
description = "Smart grain silo monitoring OpenEnv environment"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "openenv-core",
    "pydantic>=2.0",
    "openai",
    "httpx",
    "pyyaml",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.setuptools.packages.find]
where = ["."]
